--- a/src/components/layouts/BaseLayout/Siders/index.less
+++ b/src/components/layouts/BaseLayout/Siders/index.less
@@ -8,7 +8,7 @@
     justify-content: center;
 
     &:first-child {
-      margin-top: 20px;
+      margin-top: 5px;
     }
 
     .anticon {
@@ -57,7 +57,7 @@
 }
 
 .theme-icons {
-  margin-bottom: 15px;
+  // margin-bottom: 15px;
   user-select: none;
 
   img {
